--- a/public/name.scss
+++ b/public/name.scss
@@ -12,3 +12,53 @@
     justify-content: center;
     background-image: repeating-linear-gradient(to left,#C1E1C1);
 }
+
+.Glutenicon {
+    text-align: center;
+}
+img {
+    display: block;
+    margin: 0 auto;
+    align-items: center;
+}
+
+h4 {
+    text-align:center;
+}
+
+.progress-bar {
+    width: 200px; 
+    height: 20px; 
+    background-color: #F2D2BD;
+    margin-bottom: 20px;
+}
+
+.progress {
+    height: 100%;
+    background-color:#C1E1C1;
+    width: 0;
+    transition: width 0.5s ease;
+}
+
+.caldendar {
+    display: flex;
+    flex-direction: row;
+}
+
+.row {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 10px;
+}
+
+.day {
+    width: 100px;
+}
+
+.meal-entry {
+    width: 20px;
+    height: 20px;
+    background-color: #C1E1C1;
+    margin-left: 10px;
+    cursor: pointer;
+}
