--- a/public/main.scss
+++ b/public/main.scss
@@ -1,3 +1,30 @@
+.progress-bar {
+    width: 100%;
+    background-color: #F2D2BD;
+ 
+}
+
+.progress {
+    height: 100%;
+    background-color: #C1E1C1;
+    width: 0;
+    transition: width 0.3s;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+
+}
+
+.form input[type="number"] {
+    width: 70px;
+}
+
+.form button {
+    margin-left: 10px;
+}
+
 #one {
     margin: 2px;
 }
@@ -38,6 +65,11 @@ h3 {
     text-align: center;
 }
 
+.Banana-title {
+    font-size: 25pt;
+    text-align: center;
+}
+
 h4 {
     text-align: center;
 }
@@ -53,19 +85,19 @@ img {
 
 
 
-.progress-bar {
-    width: 200px; 
-    height: 20px; 
-    background-color: #F2D2BD;
-    margin-bottom: 20px;
-}
+// .progress-bar {
+//     width: 200px; 
+//     height: 20px; 
+//     background-color: #F2D2BD;
+//     margin-bottom: 20px;
+// }
 
-.progress {
-    height: 100%;
-    background-color:#C1E1C1;
-    width: 0;
-    transition: width 0.5s ease;
-}
+// .progress {
+//     height: 100%;
+//     background-color:#C1E1C1;
+//     width: 0;
+//     transition: width 0.5s ease;
+// }
 
 .calendar {
     display: flex;
@@ -142,26 +174,57 @@ img {
     background-color: #C1E1C1;
 }
 
-.pancake-popup {
+// popup-overlay {
+//     position: fixed;
+//     top: 0; 
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     visibility: hidden;
+//     opacity: 0;
+//     transition: visibility 0s, opacity 0.3s;
+// }
+
+#pancake-popup {
+    display: hidden;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s;
     background: #F2D2BD;
     padding: 5%;
     margin: 10%;
     border-radius: 5%;
 }
 
-.pancake-popup img {
+
+#pancake-popup img {
     display: block;
     width: 33%;
 }
 
-.pancake-popup h3{
+#pancake-popup h3{
     background-color: #C1E1C1;
     padding: 3%;
 
 }
 
-.pancake-popup button{
+#pancake-popup button{
     background-color: #C1E1C1;
     border-radius: 5px;
-    text-align: right;
+    justify-content: right;
+}
+
+.close-button {
+    position: absolute;
+    cursor: pointer;
+    justify-content: top-left;
+}
+
+.nutritional-values img{
+    width: 80%;
 }
