--- a/public/main.scss
+++ b/public/main.scss
@@ -401,6 +401,8 @@ h5 {
     display: grid;
 }
 
+
+// W3 Schools. (n.d). How TO- Align Images Side By Side. https://www.w3schools.com/howto/howto_css_images_side_by_side.asp 
 // Using flex box to position recipe buttons in a row
 .foods {
     display: flex;
